syntax = "proto3";

package com.nikitahohulia.api.internal.v2.usersvc.input.reqreply.get_by_id.proto;

option java_multiple_files = true;

import "com/nikitahohulia/api/internal/v2/usersvc/commonmodels/user/user.proto";

message GetUserByIdRequest {
  string userId = 1;
}

message GetUserByIdResponse {
  oneof response {
    Success success = 1;
    Failure failure = 2;
  }

  message Success {
    commonmodels.user.User user = 1;
  }

  message Failure {
    string message = 1;
  }
}
